Упрощены DecodingController и DecodingService, убрана непотокобезопасная переменная